--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a class="zone B" href="B.Palats_Ukraina.html"></a>
         <a class="zone B" href="B.Lybidska.html"></a>
         <a class="zone B" href="https://vermillion-eclair-b71162.netlify.app/b.demiivska"></a>
-        <a class="zone B" href="B.Holosiivska.html"></a>
+        <a class="zone B" href="https://vermillion-eclair-b71162.netlify.app/B.Holosiivska.html"></a>
         <a class="zone B" href="B.Vasylkivska.html"></a>
         <a class="zone B" href="B.Vystavkovyi_tsentr.html"></a>
         <a class="zone B" href="B.Ipodrom.html"></a>
