--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <a class="zone B" href="B.Olimpiiska.html"></a>
         <a class="zone B" href="B.Palats_Ukraina.html"></a>
         <a class="zone B" href="B.Lybidska.html"></a>
-        <a class="zone B" href="https://vermillion-eclair-b71162.netlify.app/b.demiivska"></a>
+        <a class="zone B" href="https://vermillion-eclair-b71162.netlify.app/B.Demiivska"></a>
         <a class="zone B" href="https://vermillion-eclair-b71162.netlify.app/B.Holosiivska.html"></a>
         <a class="zone B" href="B.Vasylkivska.html"></a>
         <a class="zone B" href="B.Vystavkovyi_tsentr.html"></a>
