--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
   <meta name="background-color" content="#1c1c1e"/>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <script>
+  if ("serviceWorker" in navigator) {
+    window.addEventListener("load", () => {
+      navigator.serviceWorker.register("/sw.js")
+        .then(reg => console.log("SW registered:", reg))
+        .catch(err => console.error("SW registration failed:", err));
+    });
+  }
+</script>
 </head>
 <body class="loading">
   <main class="container">
